kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-app
  template:
    metadata:
      labels:
        app: homework-app
    spec:
      serviceAccountName: monitoring
      volumes:
      - name: shared-volume
        emptyDir: {}
      containers:
      - name: main-container
        image: nginx:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
        readinessProbe:
          httpGet:
            path: /metrics.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        command:
        - /bin/sh
        - -c
        - |
          echo 'server {
            listen 8000;
            root /usr/share/nginx/html;
            index index.html;
          }' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;';
